--- a/google.html
+++ b/google.html
@@ -11,8 +11,8 @@
         <div class="navbar">
             <p class="nav-item">Gmail</p>
             <p class="nav-item">Images</p>
-            <img class="nav-item nav-icon" src="images/menu_icon.png" alt="menu icon" />
-            <img class="nav-item round-circle" src="images/profile.jpg" />
+            <img class="nav-item nav-icon" src="C:\Users\user\Downloads\menu_icon.png" alt="menu icon" />
+            <img class="nav-item round-circle" src=C:\Users\user\Downloads\google_image.png"images/profile.jpg" />
         </div>
     </main>
 </body>
